--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -9,6 +9,16 @@
     background-size: cover;
 }
 
+.home-header {
+    color: #6d8454;
+}
+
+.home-logo {
+    width: 150px;
+    border-radius: 150px;
+    padding: 5px;
+}
+
 .order-details {
     /* width: "80%"; */
     height: 250px;
