--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,5 +1,13 @@
 .base-body {
     background-color: whitesmoke;
+    border: thick double #32a1ce;
+}
+
+.footer {
+    height: 3rem;
+    bottom: 0;
+    position: sticky;
+    background-color: #6d8454;
 }
 
 .home-body {
@@ -26,6 +34,7 @@
 
 .button-container {
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 .fancy-font {
@@ -34,6 +43,17 @@
 
 .center-font {
     text-align: center;
+}
+
+.nav-item {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.nav-option {
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 25px;
 }
 
 .required-field {
